--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,42 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/outer_layout"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="matrix"
-        android:src="@drawable/ic_launcher_background" />
+    android:layout_marginTop="15dp"
+    android:layout_marginBottom="15dp">
 
     <LinearLayout
-        android:id="@+id/inner_layout"
+        android:id="@+id/outer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="15dp"
-        android:gravity="center|start"
+        android:padding="15dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/title_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Movie Name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+    <LinearLayout
+        android:id="@+id/inner_layout_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_launcher_background" />
 
-        <TextView
-            android:id="@+id/rating_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rating : 5 / 10"
-            android:textAppearance="@style/TextAppearance.AppCompat" />
+        <LinearLayout
+            android:id="@+id/inner_layout_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:gravity="start"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/title_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Movie Name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+            <TextView
+                android:id="@+id/rating_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rating : 5 / 10"
+                android:layout_marginTop="10dp"
+                android:textAppearance="@style/TextAppearance.AppCompat" />
+        </LinearLayout>
     </LinearLayout>
-
-
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/inner_layout_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/plan_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
+            android:text="Wishlist"/>
+        <Button
+            android:id="@+id/watching_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Watching"/>
+        <Button
+            android:id="@+id/watched_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Watched"/>
+    </LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
