--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
-    android:layout_marginBottom="15dp">
+    android:layout_marginBottom="15dp"
+    >
 
     <LinearLayout
         android:id="@+id/outer_layout"
@@ -57,27 +58,33 @@
         android:orientation="horizontal">
         <Button
             android:id="@+id/plan_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginRight="5dp"
-            android:text="Wishlist"/>
+            android:text="Wishlist"
+            android:textSize="11dp"
+            />
         <Button
             android:id="@+id/watching_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:text="Watching"/>
+            android:text="Watching"
+            android:textSize="11dp"
+            />
         <Button
             android:id="@+id/watched_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:text="Watched"/>
+            android:text="Watched"
+            android:textSize="11dp"
+            />
     </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
