--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,23 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:background="#fff">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginVertical="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
+
+        android:background="#fff"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingVertical="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_margin="30dp"
+        >
+
+        <ImageView
+            android:id="@+id/logo_Image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/tv"
+            android:layout_marginTop="20dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:fontFamily="@font/taviraj_thin"
+            android:text="Welcome Back,"
+            android:textColor="@color/black"
+            android:textSize="45sp" />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:fontFamily="@font/taviraj_thin"
+            android:text="Login to Continue"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <!--<TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -48,15 +69,103 @@
             android:hint="Password"
             android:inputType="textPersonName"
             android:text="" />
+-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-        <Button
+            android:hint="Username"
+            app:boxCornerRadiusTopEnd="20dp"
+            android:textColorHint="@color/black"
+            app:boxStrokeColor="@color/black"
+
+            app:boxCornerRadiusBottomStart="20dp"
+
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:id="@+id/username_edit_text"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"/>
+
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:hint="Password"
+            android:textColorHint="@color/black"
+            app:boxStrokeColor="@color/black"
+
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/black"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_marginTop="20dp">
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/password_edit_text"
+                android:inputType="textPassword"
+                android:textColor="@color/black"/>
+
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+        <!--<Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:onClick="onLogin"
             android:paddingHorizontal="50sp"
             android:paddingVertical="15sp"
-            android:text="Login" />
+            android:text="Login" />-->
+        <Button
+            android:layout_width="200dp"
+
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:text="Forget Password?"
+            android:textColor="@color/black"
+            android:layout_gravity="right"
+            android:elevation="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="0dp"
+            />
+
+        <Button
+            android:id="@+id/Loginbutton"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="Sign In"
+            android:layout_gravity="center"
+            android:background="#000000"
+            android:onClick="onLogin"
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"/>
+
+        <Button
+            android:id="@+id/newUser"
+            android:layout_width="200dp"
+
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:text="New User? Sign Up"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:elevation="10dp"
+
+
+            />
 
         <TextView
             android:id="@+id/warning"
