--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -24,18 +24,16 @@
     <TextView
         android:id="@+id/logoText"
         android:layout_width="wrap_content"
-        android:layout_height="189dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/calligraffitti"
         android:text="TV Show Watch Tracker"
         android:textAlignment="center"
         android:textColor="#5c0403"
         android:textSize="65sp"
-
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoImage" />
+        app:layout_constraintTop_toBottomOf="@+id/logoImage"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
