--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -46,8 +46,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rating : 5 / 10"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="4dp"
                     android:textAppearance="@style/TextAppearance.AppCompat" />
+
+                <RatingBar
+                    android:id="@+id/indicatorbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+
+                    android:isIndicator="true"
+                    android:layout_marginStart="-3dp"
+                    />
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
