--- a/app/src/main/res/layout/activity_add_movie.xml
+++ b/app/src/main/res/layout/activity_add_movie.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddMovie">
@@ -9,48 +10,79 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         android:padding="40dp"
-
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-3dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/taviraj_thin"
+            android:background="@color/white"
             android:text="MOVIE"
-
-            android:textSize="100sp"
-            android:layout_marginTop="50dp"/>
+            android:textColor="@color/grey"
+            android:textSize="100sp" />
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="MovieName"
-            app:boxCornerRadiusTopEnd="20dp"
+            app:hintTextColor="@color/grey"
+            android:hint="Movie Name"
+            android:textColorHint="@color/grey"
+            app:boxStrokeColor="@color/grey"
             app:boxCornerRadiusBottomStart="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            app:boxCornerRadiusTopEnd="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
                 android:id="@+id/mname_edt"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:textColor="@color/grey"
+                android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:textColorHint="@color/grey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="MovieURL"
             android:layout_marginTop="30dp"
-            app:boxCornerRadiusTopEnd="20dp"
+            app:boxStrokeColor="@color/grey"
+            android:hint="Movie URL"
+            app:hintTextColor="@color/grey"
             app:boxCornerRadiusBottomStart="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            app:boxCornerRadiusTopEnd="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
                 android:id="@+id/url_edt"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="Year of release"
+            app:boxStrokeColor="@color/grey"
+            android:textColorHint="@color/grey"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:hintTextColor="@color/grey"
+            app:boxCornerRadiusTopEnd="20dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/year_edt"
+                android:layout_width="match_parent"
+                android:textColor="@color/grey"
+                android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -58,38 +90,27 @@
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="77dp"
             android:layout_marginTop="40dp"
-            tools:layout_editor_absoluteY="283dp"
             android:numStars="5"
             android:stepSize="1"
-
+            tools:layout_editor_absoluteX="77dp"
+            tools:layout_editor_absoluteY="283dp"
+            android:theme="@style/RatingBar"
             />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:clickable="true"
             android:focusable="true"
             android:onClick="add"
-            android:layout_marginTop="40dp"
             app:srcCompat="@android:drawable/stat_sys_upload"
             tools:layout_editor_absoluteX="177dp"
             tools:layout_editor_absoluteY="451dp" />
 
-
-
-
-
-
-
-
-
-
-
     </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
