--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -11,20 +12,20 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:layout_margin="30dp"
-        >
+        android:layout_margin="30dp">
 
         <ImageView
             android:id="@+id/logo_Image"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:src="@drawable/tv"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/taviraj_thin"
+            android:textColor="@color/grey"
             android:text="Welcome Back,"
             android:textSize="45sp" />
 
@@ -32,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
+            android:textColor="@color/grey"
             android:fontFamily="@font/taviraj_thin"
             android:text="Login to Continue"
             android:textSize="20sp" />
@@ -69,22 +71,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"
+            android:textColorHint="@color/grey"
+            app:hintTextColor="@color/grey"
+            app:boxStrokeColor="@color/grey"
             app:boxCornerRadiusTopEnd="20dp"
             app:boxCornerRadiusBottomStart="20dp"
+            android:background="@color/white"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:id="@+id/username_edit_text"
+                android:textColor="@color/grey"
                 android:layout_height="wrap_content"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
+            android:background="@color/white"
             android:layout_height="wrap_content"
             android:hint="Password"
             app:passwordToggleEnabled="true"
+            android:textColorHint="@color/grey"
+            app:hintTextColor="@color/grey"
+            app:boxStrokeColor="@color/grey"
             app:passwordToggleTint="@color/black"
             app:boxCornerRadiusTopEnd="20dp"
             app:boxCornerRadiusBottomStart="20dp"
@@ -94,6 +105,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/grey"
                 android:id="@+id/password_edit_text"
                 android:inputType="textPassword" />
 
@@ -121,6 +133,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:text="Sign In"
+            android:textColor="@color/white"
             android:layout_gravity="center"
             android:onClick="onLogin"
             android:layout_marginTop="10dp"
@@ -138,6 +151,7 @@
             android:id="@+id/warning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/design_default_color_error"
             android:text="Please enter valid credentials !"
             android:visibility="invisible"/>
 
