--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,6 +12,7 @@
         android:id="@+id/outer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:padding="15dp"
         android:orientation="vertical">
 
@@ -19,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="100dp"
@@ -39,13 +42,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Movie Name"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
                 <TextView
-                    android:id="@+id/rating_view"
+                    android:id="@+id/year_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rating : 5 / 10"
+                    android:textColor="@color/black"
+                    android:text="Released : 2020"
                     android:layout_marginTop="4dp"
                     android:textAppearance="@style/TextAppearance.AppCompat" />
 
@@ -54,10 +59,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:numStars="5"
-
                     android:isIndicator="true"
                     android:layout_marginStart="-3dp"
-                    />
+                    android:theme="@style/RatingBar"/>
+
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -70,32 +75,35 @@
                 android:id="@+id/plan_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginRight="5dp"
-                android:text="Wishlist"
+                android:layout_weight="1"
+                android:textColor="@color/white"
                 android:tag="wish"
+                android:text="Wishlist"
                 android:textSize="11dp" />
 
             <Button
                 android:id="@+id/watching_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="Watching"
+                android:layout_weight="1"
                 android:tag="watching"
+                android:textColor="@color/white"
+                android:text="Watching"
                 android:textSize="11dp" />
 
             <Button
                 android:id="@+id/watched_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:textColor="@color/white"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="Watched"
+                android:layout_weight="1"
                 android:tag="watched"
+                android:text="Watched"
                 android:textSize="11dp" />
 
         </LinearLayout>
