--- a/app/src/main/res/layout/fragment__wish.xml
+++ b/app/src/main/res/layout/fragment__wish.xml
@@ -4,21 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.Fragment_Wish">
-
+    tools:context=".Fragments.FragmentWish">
 
    <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recycler_view_my"
+       android:id="@+id/recycler_view_wish_list"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginStart="3dp"
-       android:layout_marginTop="20dp"
-       android:layout_marginEnd="3dp"
-
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
+       android:layout_height="match_parent"
        android:background="@color/white"
-       app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/movie_item" />
 
 </FrameLayout>
