--- a/app/src/main/res/layout/activity_my_list.xml
+++ b/app/src/main/res/layout/activity_my_list.xml
@@ -4,44 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".my_list">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:paddingTop="100dp">
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+    android:background="@color/white"
+    tools:context=".MyList">
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome"
-        android:textSize="60dp"
-        android:fontFamily="@font/calligraffitti"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent">
 
-        android:gravity="center_horizontal"
-        />
-    <ImageView
-        android:layout_margin="40dp"
-
-        android:id="@+id/mymovie"
-        android:layout_width="169dp"
-        android:layout_height="151dp"
-        app:srcCompat="@drawable/movieslist"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="264dp"
-        android:onClick="toMymovies"/>
-
-    <ImageView
-        android:id="@+id/movies"
-        android:layout_width="218dp"
-        android:layout_height="158dp"
-        app:srcCompat="@drawable/mymovies"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="476dp"
-        android:onClick="toMain"/>
-
-
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_margin="40dp"
+            android:onClick="toMyMovies"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/myMovie"
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/movieslist"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My Movies"
+                android:textColor="@color/grey"
+                android:textSize="30dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_margin="40dp"
+            android:onClick="toMain"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/movies"
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/mymovies"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="All Movies"
+                android:textColor="@color/grey"
+                android:textSize="30dp"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
