--- a/app/src/main/res/layout/fragment_watched.xml
+++ b/app/src/main/res/layout/fragment_watched.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.FragmentWatching">
+    tools:context=".Fragments.FragmentsWatched">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_watching"
+        android:id="@+id/recycler_view_watched"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
