--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gold">#FFD700</color>
     <color name="grey">#808080</color>
+    <color name="green">#00FF00</color>
+    <color name="dark_green">#006400</color>
 </resources>
