--- a/app/src/main/res/layout/fragment__wish.xml
+++ b/app/src/main/res/layout/fragment__wish.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.FragmentWish">
+    tools:context=".fragments.FragmentWish">
 
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_wish_list"
