--- a/app/src/main/res/layout/activity_movie_tabs.xml
+++ b/app/src/main/res/layout/activity_movie_tabs.xml
@@ -15,7 +15,7 @@
         android:background="@color/light_grey">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/fjord_one"
             android:padding="6dp"
