--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -5,114 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentsAdd">
-    <ScrollView
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_add"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:padding="40dp"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="-3dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:background="@color/white"
-                android:fontFamily="@font/taviraj_thin"
-                android:text="MOVIE"
-                android:textAlignment="center"
-                android:textColor="@color/grey"
-                android:textSize="80sp" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:hintTextColor="@color/grey"
-                android:hint="Movie Name"
-                android:textColorHint="@color/grey"
-                app:boxStrokeColor="@color/grey"
-                app:boxCornerRadiusBottomStart="20dp"
-                app:boxCornerRadiusTopEnd="20dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/mname_edt"
-                    android:layout_width="match_parent"
-                    android:textColor="@color/grey"
-                    android:layout_height="wrap_content" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:textColorHint="@color/grey"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                app:boxStrokeColor="@color/grey"
-                android:hint="Movie URL"
-                app:hintTextColor="@color/grey"
-                app:boxCornerRadiusBottomStart="20dp"
-                app:boxCornerRadiusTopEnd="20dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/url_edt"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/grey"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:hint="Year of release"
-                app:boxStrokeColor="@color/grey"
-                android:textColorHint="@color/grey"
-                app:boxCornerRadiusBottomStart="20dp"
-                app:hintTextColor="@color/grey"
-                app:boxCornerRadiusTopEnd="20dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:inputType="numberDecimal"
-                    android:id="@+id/year_edt"
-                    android:layout_width="match_parent"
-                    android:textColor="@color/grey"
-                    android:layout_height="wrap_content" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <RatingBar
-                android:id="@+id/ratingBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:numStars="5"
-                android:stepSize="1"
-                tools:layout_editor_absoluteX="77dp"
-                tools:layout_editor_absoluteY="283dp"
-                android:theme="@style/RatingBar"
-                />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floatingActionButton2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:clickable="true"
-                android:focusable="true"
-                app:srcCompat="@drawable/ic_baseline_upgrade_24"
-                android:layout_gravity="center_horizontal" />
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        tools:listitem="@layout/movie_item" />
 
 </FrameLayout>
