--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -27,7 +27,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_launcher_background" />
+                android:src="@drawable/movieslist" />
 
             <LinearLayout
                 android:id="@+id/inner_layout_2"
@@ -37,13 +37,29 @@
                 android:gravity="start"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/title_view"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Movie Name"
-                    android:textColor="@color/black"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/title_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Movie Name"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                    <ImageView
+                        android:id="@+id/delete_icon"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:tag="delete"
+                        android:src="@drawable/ic_baseline_delete_24"/>
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/year_view"
